Subiendo el ignored

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AzureDB": "Server=dbwip.database.windows.net;Database=dbLSC;User=saAzure;Password=Sonic991978;",
-    "LocalDB": "Server=DBWIP\\DBWIP; Database=dbWIP;User=sa;Password=Sonic991978;"
+    "LocalDB": "Server=DBWIP\\DBWIP; Database=dbWIP;User=sa;Password=Sonic991978;",
+    "CopiaDB": "Server=DBWIP\\DBWIP; Database=dbWIP;User=sa;Password=Sonic991978;"
   }
 }
